# patterns

./: Bomb.cpp  Bomb.h  BombIterator.cpp  BombIterator.h  CMakeLists.txt  DestroyableGroundObject.h  DynamicObject.h  GameObject.h  Ground.cpp  Ground.h  House.cpp  House.h  ICharacter.h  LevelGUI.cpp  LevelGUI.h  Logger.cpp  Logger.h  MyTools.cpp  MyTools.h  Plane.cpp  Plane.h  SBomber.cpp  SBomber.h  SBomberProject.cpp  ScreenSingleton.cpp  ScreenSingleton.h  Tank.cpp  Tank.h  Visitor.cpp  Visitor.h
